@@ -125,6 +125,9 @@
       <name>Guy Allard</name>
     </contributor>
     <contributor>
+      <name>Blair Martin</name>
+    </contributor>
+    <contributor>
       <name>Fredrik Borgh</name>
     </contributor>
     <contributor>
