@@ -1,0 +1,69 @@
+/*
+ *  Copyright 2001-2007 Stephen Colebourne
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ */
+package org.joda.time.chrono;
+
+import junit.framework.TestCase;
+import junit.framework.TestSuite;
+
+import org.joda.time.DateTime;
+import org.joda.time.DateTimeZone;
+
+/**
+ *
+ * @author Brian S O'Neill
+ * @author Blair Martin
+ */
+public class TestLenientChronology extends TestCase {
+    public static void main(String[] args) {
+        junit.textui.TestRunner.run(suite());
+    }
+
+    public static TestSuite suite() {
+        return new TestSuite(TestLenientChronology.class);
+    }
+
+    public TestLenientChronology(String name) {
+        super(name);
+    }
+
+    protected void setUp() throws Exception {
+    }
+
+    protected void tearDown() throws Exception {
+    }
+
+    public void testNearDstTransition() {
+        // This is just a regression test. Test case provided by Blair Martin.
+
+        int hour = 23;
+        DateTime dt;
+
+        dt = new DateTime(2006, 10, 29, hour, 0, 0, 0,
+                          ISOChronology.getInstance(DateTimeZone.forID("America/Los_Angeles")));
+        assertEquals(hour, dt.getHourOfDay()); // OK - no LenientChronology
+
+        dt = new DateTime(2006, 10, 29, hour, 0, 0, 0,
+                          LenientChronology.getInstance
+                          (ISOChronology.getInstance(DateTimeZone.forOffsetHours(-8))));
+        assertEquals(hour, dt.getHourOfDay()); // OK - no TZ ID
+
+        dt = new DateTime(2006, 10, 29, hour, 0, 0, 0,
+                          LenientChronology.getInstance
+                          (ISOChronology.getInstance(DateTimeZone.forID("America/Los_Angeles"))));
+
+        assertEquals(hour, dt.getHourOfDay()); // Used to fail - hour was 22
+    }
+}
